perico-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: perico-client-backend-app-service
  labels:
    app: perico-client-backend-app
spec:
  type: LoadBalancer
  selector:
    product: integrator
    app: perico-client-backend-app
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perico-client-backend-app
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: perico-client-backend-app
  template:
    metadata:
      labels:
        app: perico-client-backend-app
    spec:
      containers:
        - image: integrator.azurecr.io/perico-client-backend-app
          name: perico-client-backend-app
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
      imagePullSecrets:
        - name: azure-registry-secret
